src/components/views/app/app.scss
@import '../variables';

:global(html), :global(body), :global(.appWrapper), :global(#root) {
  height: 100%;
  width: 100%;
  overflow-x: hidden;
  padding: 0;
  margin: 0;
  font-family: 'Exo 2', sans-serif;
}

.what {
  background: green;
}
.banner {
  text-align: center;
  color: #EEE;
  padding-top: $navbar-height + 1px;
  background: url("./banner.jpg") no-repeat fixed center 0;
  background-size: cover;
  //background-blend-mode: luminosity;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, .12), 1px 2px 5px rgba(0, 0, 0, .4);
  border-bottom: 3px solid darken($green, 10%);
  box-shadow: $global-box-shadow;

  header {
    margin: 30px 0;
    h1 {
      font-weight: 600;
      margin: 10px;
    }
    h4 {
      font-weight: 400;
      margin: 4px;
    }
  }
  .logoWrapper {
    $bottom-pos: -40px;

    display:inline-block;
    height: 200px;
    width: 200px;
    position: relative;
    bottom: $bottom-pos;
    margin-top: $bottom-pos; // Used to prevent relatively position image from taking up unnecessary space
    z-index: 0;

    .CSEALogo {
      background: #333;
      box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .06), 0 2px 5px 0 rgba(0, 0, 0, .2);
    }

    //&:before {
    //  content: '';
    //  position: absolute;
    //  left: 0;
    //  top: 0;
    //  width: 200px;
    //  height: 200px;
    //  background-color: $green;
    //  opacity: .75;
    //  border-radius: 100%;
    //  animation: scaleout 1.5s infinite ease-in-out;
    //  z-index: -1;
    //  @keyframes scaleout {
    //    0% {
    //      transform: scale(1)
    //    }
    //    to {
    //      transform: scale(1.5);
    //      opacity: 0
    //    }
    //  }
    //}


  }
}

.mainWrapper {
  padding-top: 35px;
  background: #EEE;
  font-size: 16px;
}

